<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.idoon.fruitandveg.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout"
        android:layout_above="@+id/linearLayout2"
        android:layout_alignParentStart="true">

    </LinearLayout>

    <info.hoang8f.widget.FButton
        android:id="@+id/map"
        android:text="@string/googlemaps"
        android:textColor="@android:color/white"
        android:layout_width="70dp"
        app:buttonColor="@color/btnSignUp"
        android:layout_height="wrap_content"
        app:shadowColor="@android:color/black"
        app:shadowEnabled="true"
        app:shadowHeight="5dp"
        app:cornerRadius="5dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_above="@+id/linearLayout2"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/readme" />




    <info.hoang8f.widget.FButton
        android:id="@+id/readme"
        android:text="@string/readme"
        android:textColor="@android:color/white"
        android:layout_width="70dp"
        app:buttonColor="@color/btnSignActive"
        android:layout_height="wrap_content"
        app:shadowColor="@android:color/black"
        app:shadowEnabled="true"
        app:shadowHeight="5dp"
        app:cornerRadius="5dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginStart="16dp"
        android:layout_alignBottom="@+id/linearLayout"
        android:layout_toEndOf="@+id/linearLayout" />

    <info.hoang8f.widget.FButton
        android:id="@+id/picture"
        android:text="@string/picture"
        android:textColor="@android:color/white"
        android:layout_width="70dp"
        app:buttonColor="@color/btnSignActive"
        android:layout_height="wrap_content"
        app:shadowColor="@android:color/black"
        app:shadowEnabled="true"
        app:shadowHeight="5dp"
        app:cornerRadius="5dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_above="@+id/linearLayout2"
        android:layout_centerHorizontal="true" />


    <LinearLayout
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:weightSum="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout2">

        <info.hoang8f.widget.FButton
            android:id="@+id/btnSignUp"
            android:text="@string/signup"
            android:textColor="@android:color/white"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_margin="8dp"
            app:buttonColor="@color/btnSignUp"
            android:layout_height="wrap_content"
            app:shadowColor="@android:color/black"
            app:shadowEnabled="true"
            app:shadowHeight="5dp"
            app:cornerRadius="4dp" />


        <info.hoang8f.widget.FButton
            android:id="@+id/btnSignIn"
            android:text="@string/signin"
            android:textColor="@android:color/white"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_margin="8dp"
            app:buttonColor="@color/btnSignActive"
            android:layout_height="wrap_content"
            app:shadowColor="@android:color/black"
            app:shadowEnabled="true"
            app:shadowHeight="5dp"
            app:cornerRadius="4dp"
            />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:contentDescription="@string/slogan"
        android:src="@drawable/logo"
        android:layout_marginBottom="475dp"
        android:layout_above="@+id/linearLayout2"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
