<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_black"
    tools:context="com.idoon.fruitandveg.SignUp">


    <LinearLayout
        android:orientation="vertical"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout4">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edtPhone"
            android:hint="@string/PhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@android:color/white"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:inputType="phone"
            app:met_baseColor="@android:color/white"
            app:met_floatingLabel="highlight"
            app:met_minCharacters="9"
            app:met_maxCharacters="10"
            app:met_primaryColor="@android:color/white"
            app:met_singleLineEllipsis="true"
            />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edtName"
            android:hint="@string/FullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@android:color/white"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:inputType="text"
            app:met_baseColor="@android:color/white"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="10"
            app:met_primaryColor="@android:color/white"
            app:met_singleLineEllipsis="true"
            />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edtPassword"
            android:hint="@string/EnterPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@android:color/white"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:inputType="textPassword"
            app:met_baseColor="@android:color/white"
            app:met_floatingLabel="highlight"
            app:met_minCharacters="5"
            app:met_maxCharacters="15"
            app:met_primaryColor="@android:color/white"
            app:met_singleLineEllipsis="true"
            />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edtSecureCode"
            android:hint="@string/enterScureCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@android:color/white"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:inputType="text"
            app:met_baseColor="@android:color/white"
            app:met_floatingLabel="highlight"
            app:met_minCharacters="3"
            app:met_maxCharacters="15"
            app:met_primaryColor="@android:color/white"
            app:met_singleLineEllipsis="true"
            />


    </LinearLayout>


    <info.hoang8f.widget.FButton
        android:id="@+id/picture"
        android:text="@string/PicReg"
        android:textColor="@android:color/white"
        android:layout_width="wrap_content"
        app:buttonColor="@color/btnSignActive"
        android:layout_height="wrap_content"
        app:shadowColor="@android:color/black"
        app:shadowEnabled="true"
        app:shadowHeight="5dp"
        app:cornerRadius="5dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_below="@+id/linearLayout4"
        android:layout_alignParentStart="true" />



    <info.hoang8f.widget.FButton
        android:weightSum="2"
        android:id="@+id/btnSignUp"
        android:text="@string/signup"
        android:textColor="@android:color/white"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_margin="8dp"
        app:buttonColor="@color/btnSignUp"
        android:layout_height="wrap_content"
        app:shadowColor="@android:color/black"
        app:shadowEnabled="true"
        app:shadowHeight="5dp"
        app:cornerRadius="4dp"
        />


</RelativeLayout>
