<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_black"
    tools:context="com.idoon.fruitandveg.SignIn">
    <LinearLayout
        android:orientation="vertical"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout3">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edtPhone"
            android:hint="@string/PhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@android:color/white"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:inputType="phone"
            app:met_baseColor="@android:color/white"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="10"
            app:met_primaryColor="@android:color/white"
            app:met_singleLineEllipsis="true"
            />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edtPassword"
            android:gravity="right"
            android:textAlignment="gravity"
            android:hint="@string/EnterPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@android:color/white"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:inputType="textPassword"
            app:met_baseColor="@android:color/white"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="10"
            app:met_primaryColor="@android:color/white"
            app:met_singleLineEllipsis="true"
            />

        <LinearLayout
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/ckbRemember"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                style="@style/ThemeOverlay.AppCompat.Light"
                android:text="זכור אותי"
                android:gravity="center_vertical"
                android:textColor="@android:color/white"
                app:cbd_strokeColor="@android:color/white"
                app:cbd_tickColor="@color/colorPrimaryDark"
                />

            <TextView
                android:id="@+id/txtForgotPwd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/forgot_pwd"
                android:textColor="@android:color/white" />
        </LinearLayout>

    </LinearLayout>

    <info.hoang8f.widget.FButton
        android:id="@+id/btnSignIn"
        android:text="@string/signin"
        android:textColor="@android:color/white"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:layout_width="170dp"
        app:buttonColor="@color/btnSignActive"
        android:layout_height="wrap_content"
        app:shadowColor="@android:color/black"
        app:shadowEnabled="true"
        app:shadowHeight="5dp"
        app:cornerRadius="4dp"
        android:layout_alignParentBottom="true" />

    <info.hoang8f.widget.FButton
        android:id="@+id/BtnIn"
        android:text="@string/BtnIn"
        android:textColor="@android:color/white"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:layout_width="170dp"
        app:buttonColor="@color/btnSignUp"
        android:layout_height="wrap_content"
        app:shadowColor="@android:color/black"
        app:shadowEnabled="true"
        app:shadowHeight="5dp"
        app:cornerRadius="4dp"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/linearLayout3" />



</RelativeLayout>
